# Kokoro-Desktop

./: README.md  pyproject.toml  test_comprehensive.py  test_emotion_verification.py  test_features.py  test_multi_voice_blending.py
kokoro_tts/: __init__.py  app.py  gui.py  web_gui.py
kokoro_tts/templates/: index.html
templates/: index.html
