[project]
name = "kokoro-desktop"
version = "2.4.7"
description = "A CLI text-to-speech tool using the Kokoro model, supporting multiple languages, voices (with advanced multi-voice blending), and various input formats including EPUB books and PDF documents."
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = {text = "MIT"}
authors = [
    {name = "Shreyan Gondaliya", email = "gondaliyashreyan1@gmail.com"}
]
keywords = ["text-to-speech", "tts", "kokoro", "audio", "epub", "pdf", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ebooklib>=0.18",
    "kokoro-onnx==0.3.9",
    "pymupdf>=1.25.4",
    "pymupdf4llm>=0.0.17",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.0",
    "flask>=2.0.0",
    "rich>=10.0.0",
]

[project.scripts]
kokoro-desktop = "kokoro_tts:main"
kokoro-desktop-gui = "kokoro_tts.gui:main"
kokoro-web = "kokoro_tts.web_gui:main"
kokoro-app = "kokoro_tts.app:main"

[project.urls]
Homepage = "https://github.com/gondaliyashreyan1/Kokoro-Desktop"
Repository = "https://github.com/gondaliyashreyan1/Kokoro-Desktop"
Issues = "https://github.com/gondaliyashreyan1/Kokoro-Desktop/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kokoro_tts"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.1.0",
]
